<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">



        <AutoCompleteTextView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            style="@style/MyEditTextStyle"
            android:id="@+id/town_ed"
            android:hint="@string/town"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <TextView
            android:layout_alignStart="@+id/town_ed"
            android:id="@+id/error_msg_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/town_ed"
            android:textSize="12sp"
            android:text="@string/town_not_found"
            android:textColor="@color/red_create_account"/>

        <LinearLayout
            android:id="@+id/address_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_below="@+id/town_ed">


        <AutoCompleteTextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:id="@+id/address_et"
            android:focusable="true"
            android:focusableInTouchMode="true"
            style="@style/MyEditTextStyle"
            android:hint="@string/address"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>




            <EditText
                style="@style/MyEditTextStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/address_et"
                android:id="@+id/home_number"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/home_num"
                android:inputType="number"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

        </LinearLayout>

        <TextView
            android:visibility="gone"
            android:layout_alignStart="@+id/town_ed"
            android:id="@+id/error_msg_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_layout"
            android:textSize="12sp"
            android:text="@string/street_not_found"
            android:textColor="@color/red_create_account"/>



    </RelativeLayout>
</LinearLayout>