<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <ImageView
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp"
        android:id="@+id/back_icon"/>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogen"
        android:textColor="#000000"
        android:alpha=".54"
        android:textSize="16sp"
        android:id="@+id/slogen"/>

    <TextView
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MyBizz"
        android:textColor="@color/main_color"
        android:textStyle="normal"
        android:textSize="56sp"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <FrameLayout
        android:layout_marginTop="12.5dp"
        android:layout_width="274dp"
        android:layout_height="47dp"
        android:id="@+id/facebook_reg_layout"
        android:layout_below="@+id/google_sign_in_btn"
        android:layout_centerHorizontal="true">

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_sign_in_btn"
        android:layout_marginTop="67dp"
        android:layout_width="274dp"
        android:layout_height="47dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:textColor="@android:color/black"
        android:background="@color/colorPrimary"
        android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/facebook_cover_btn"
            android:background="@drawable/facebook_btn"/>

    </FrameLayout>


    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/hands"
        android:id="@+id/imageView2"
        android:layout_below="@+id/layout"
        android:layout_centerHorizontal="true" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_btn"
        android:layout_marginTop="25dp"
        android:layout_width="274dp"
        android:textSize="7.5pt"
        android:layout_height="47dp"
        android:textColor="@android:color/white"
        android:background="@drawable/google_signin_btn"
        android:layout_below="@+id/slogen"
        android:layout_alignEnd="@+id/facebook_reg_layout" />

    <TextView
        android:visibility="invisible"
        android:textColor="#000000"
        android:alpha=".20"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_worry"
        android:id="@+id/textView2"
        android:layout_below="@+id/facebook_reg_layout"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/pb"
        style="?android:attr/progressBarStyleSmall"
        android:layout_gravity="center"
        android:indeterminateDrawable="@drawable/progress_bar_style"
        android:max="100"
        android:progress="20"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/confirm_agreement"
        android:id="@+id/layout"
        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@+id/title">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:alpha=".20"
            android:textSize="12sp"
            android:id="@+id/des"
            android:text="@string/by_signing"/>

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/terms_n_conditions"
            android:clickable="true"
            android:background="@drawable/ripple_effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:alpha=".20"
            android:textSize="12sp"
            android:text="@string/terms_con"/>

        <TextView
            android:clickable="true"
            android:background="@drawable/ripple_effect"
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:alpha=".20"
            android:textSize="12sp"
            android:text="@string/privacy_policy"/></LinearLayout>
    </LinearLayout>
</RelativeLayout>