<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">



        <AutoCompleteTextView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            style="@style/EditTextStyle"
            android:id="@+id/town_ed"
            android:hint="@string/town"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <LinearLayout
            android:id="@+id/linear_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:layout_marginTop="36dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:id="@+id/address_et"
            android:focusable="true"
            android:focusableInTouchMode="true"
            style="@style/EditTextStyle"
            android:hint="@string/address"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <EditText
            android:layout_marginTop="36dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/address_et"
            android:layout_alignBaseline="@+id/address_et"
            android:id="@+id/home_number"
            android:focusable="true"
            android:focusableInTouchMode="true"
            style="@style/EditTextStyle"
            android:hint="@string/home_num"
            android:inputType="number"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></LinearLayout>

        <LinearLayout
            android:id="@+id/button_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red_create_account"
            android:alpha=".56">

        <Button
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_height="48dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/end_reg"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:id="@+id/complete_address"/></LinearLayout>


    </LinearLayout>

        <ProgressBar
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progress_bar_style"
            android:max="100"
            android:progress="20"
            />
    </FrameLayout>
</LinearLayout>