<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_service_registration_view_pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="#ffffff"
    tools:context="com.mybiz.ServiceRegistrationActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolBar"
        android:elevation="4dp"
        android:background="@color/main_color">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textview_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:text="@string/create__mybiz_account"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginRight="20dp"/>
 </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/back"
            android:gravity="center"
            android:id="@+id/back_btn"/>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Finish"
                android:clickable="true"
                android:gravity="center"
                android:visibility="gone"
                android:id="@+id/finish_btn"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/next"
            android:clickable="true"
            android:gravity="center"
            android:id="@+id/next_btn"/>
        </FrameLayout>


    </LinearLayout>



</LinearLayout>
